--- a/_locales/ja/messages.json
+++ b/_locales/ja/messages.json
@@ -14,6 +14,9 @@
     "popup_extend_desc": {
         "message": "課題追加/編集画面の詳細の入力欄を広げる"
     },
+    "popup_clear_notified_users": {
+        "message": "お知らせしたいユーザーの全クリアボタンを表示する"
+    },
     "popup_wiki": {
         "message": "Wiki"
     },
