--- a/_locales/ja/messages.json
+++ b/_locales/ja/messages.json
@@ -20,6 +20,9 @@
     "popup_wiki": {
         "message": "Wiki"
     },
+    "popup_copy_wiki": {
+        "message": " 別のプロジェクトにWikiのページをコピー"
+    },
     "popup_child_page": {
         "message": "ページの新規作成時に親フォルダ名を自動入力する"
     },
