Be able modify the flag of paste-file-from-clipboard

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -37,5 +37,8 @@
     },
     "popup_filter_notification": {
         "message": "Filter notificaion"
+    },
+    "popup_paset_file_from_clipboard": {
+        "message": "Paste file from clipboard at Comment Editor of View Issue"
     }
 }
