--- a/_locales/ja/messages.json
+++ b/_locales/ja/messages.json
@@ -17,8 +17,8 @@
     "popup_clear_notified_users": {
         "message": "お知らせしたいユーザーの全クリアボタンを表示する"
     },
-    "popup_paset_file_from_clipboard": {
-        "message": "課題詳細のコメントエディタにClipboardからファイルをペースト"
+    "popup_paste_file_from_clipboard": {
+        "message": "課題詳細のコメントでクリップボードから画像をペースト"
     },
     "popup_wiki": {
         "message": "Wiki"
