--- a/_locales/ja/messages.json
+++ b/_locales/ja/messages.json
@@ -1,4 +1,10 @@
 {
+    "app_name": {
+        "message": "Backlog Power Ups - Backlogを便利に"
+    },
+    "app_description": {
+        "message": "Backlogの機能をパワーアップします。「お知らせのフィルタリング」や「クリップボードから画像貼り付け」など11個の機能追加があります。"
+    },
     "popup_apply_button": {
         "message": "適用"
     },
