--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -49,5 +49,8 @@
     },
     "popup_user_switcher": {
         "message": "Show user switcher on personal Gantt"
+    },
+    "popup_relative_date": {
+        "message": "Show relative date"
     }
 }
