--- a/_locales/ja/messages.json
+++ b/_locales/ja/messages.json
@@ -49,5 +49,8 @@
     },
     "popup_user_switcher": {
         "message": "個人のガントチャートにユーザー切り替えを表示する"
+    },
+    "popup_relative_date": {
+        "message": "絶対時間で時間を表示する"
     }
 }
