--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -52,5 +52,8 @@
     },
     "popup_relative_date": {
         "message": "Show relative date"
+    },
+    "popup_dashboard_gantt_link": {
+        "message": "Show link for gantt on my issues"
     }
 }
