--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -26,6 +26,9 @@
     "popup_paste_file_from_clipboard": {
         "message": "Paste image from clipboard at Comment Editor of View Issue"
     },
+    "popup_customized_issue_list": {
+        "message": "Rearrange columns in search result of issues"
+    },
     "popup_wiki": {
         "message": "Wiki"
     },
