--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -47,7 +47,7 @@
     "popup_user_switcher": {
         "message": "Show user switcher on personal Gantt"
     },
-    "popup_relative_date": {
-        "message": "Show relative date"
+    "popup_absolute_date": {
+        "message": "Show absolute date"
     }
 }
