fix wiki copy to other project

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -51,6 +51,6 @@
         "message": "Show absolute date"
     },
     "popup_copy_issue_keys_and_subjects": {
-        "message": "Copy issue keys and subjects"
+        "message": "Copy issue keys and subjects on issue list"
     }
 }
