Add a plugin to display assignee and due date on watchlist

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -52,5 +52,8 @@
     },
     "popup_copy_issue_keys_and_subjects": {
         "message": "Copy issue keys and subjects on issue list"
+    },
+    "popup_watch_list": {
+        "message": "Show assignee and due date on watch list"
     }
 }
