--- a/_locales/ja/messages.json
+++ b/_locales/ja/messages.json
@@ -52,5 +52,8 @@
     },
     "popup_copy_issue_keys_and_subjects": {
         "message": "課題一覧で課題キーと件名を一括コピーする"
+    },
+    "popup_watch_list": {
+        "message": "ウォッチリストに担当者と期限日を表示する"
     }
 }
