Added the function to enter an issue key from a shortcut and open to that issue

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -61,5 +61,8 @@
     },
     "popup_watch_list": {
         "message": "Show assignee and due date on watch list"
+    },
+    "popup_jump_issue": {
+        "message": "Press Ctrl(Cmd)+K to enter the issue key and open to it"
     }
 }
