--- a/locales/en.yaml
+++ b/locales/en.yaml
@@ -1,3 +1,24 @@
 app:
   name: Backlog Power Ups
   description: Power up tools for Backlog
+popup:
+  apply_button: Apply
+  issue: Issue
+  copy_issue: Copy issue to other project
+  auto_resolution: When Changing status of issue to completed, automatically set the completion reason to fixed
+  extend_desc: Extend description of issue on Add/Edit Issue
+  total_time: Show total estimated and actual hours on search result of issues
+  board: Board
+  board_oneline: Add button to show task as oneline view in Board
+  wiki: Wiki
+  copy_wiki: Copy wiki page to other project
+  child_page: Input parent page name automatically when creating new page
+  plantuml: Show PlantUML(Send UML data to plantuml.com)
+  hr: Show horizontal rule with Backlog syntax("---" or "___")
+  old_post: Show notification in old Wiki
+  general: General
+  user_switcher: Show user switcher on personal Gantt
+  absolute_date: Show absolute date
+  copy_issue_keys_and_subjects: Copy issue keys and subjects on issue list
+  watch_list: Show assignee and due date on watch list
+  jump_issue: Press Ctrl(Cmd)+K to enter the issue key and open to it
