--- a/locales/en.yaml
+++ b/locales/en.yaml
@@ -22,3 +22,7 @@ popup:
   copy_issue_keys_and_subjects: Copy issue keys and subjects on issue list
   watch_list: Show assignee and due date on watch list
   jump_issue: Press Ctrl(Cmd)+K to enter the issue key and open to it
+copy_issue:
+  prompt: Please input destination project key
+  copy_to: Copy to another project
+  refs: Refs
