--- a/locales/en.yaml
+++ b/locales/en.yaml
@@ -26,3 +26,5 @@ copy_issue:
   prompt: Please input destination project key
   copy_to: Copy to another project
   refs: Refs
+copy_issue_keys_and_subjects:
+  tooltip: Bulk copy key and subject of issues
