--- a/locales/ja.yaml
+++ b/locales/ja.yaml
@@ -28,3 +28,6 @@ copy_issue:
   refs: 関連課題
 copy_issue_keys_and_subjects:
   tooltip: 課題キーと件名を一括コピー
+copy_wiki:
+  prompt: 複製先のプロジェクトキーを入力してください。
+  copy_to: 別のプロジェクトにコピー
