--- a/locales/ja.yaml
+++ b/locales/ja.yaml
@@ -35,3 +35,5 @@ jump_issue:
   prompt: 移動先の課題キーまたは課題キーの番号を入力してください。
   alert: 課題キーのフォーマットが無効です。
   missing: 入力されたキーの課題が見つかりません。
+old_post:
+  alert: 最終更新日から1年以上が経過しています。
