--- a/locales/en.yaml
+++ b/locales/en.yaml
@@ -4,22 +4,36 @@ app:
 popup:
   apply_button: Apply
   issue: Issue
-  auto_resolution: When Changing status of issue to completed, automatically set the completion reason to fixed
-  extend_desc: Extend description of issue on Add/Edit Issue
-  total_time: Show total estimated and actual hours on search result of issues
   board: Board
-  board_oneline: Add button to show task as oneline view in Board
   wiki: Wiki
-  copy_wiki: Copy wiki page to other project
-  child_page: Input parent page name automatically when creating new page
-  plantuml: Show PlantUML(Send UML data to plantuml.com)
-  hr: Show horizontal rule with Backlog syntax("---" or "___")
-  old_post: Show notification in old Wiki
   general: General
-  user_switcher: Show user switcher on personal Gantt
-  absolute_date: Show absolute date
-  copy_issue_keys_and_subjects: Copy issue keys and subjects on issue list
-  jump_issue: Press Ctrl(Cmd)+K to enter the issue key and open to it
+absoluteDate:
+  name: Show absolute date
+autoResolution:
+  name: When Changing status of issue to completed, automatically set the completion reason to fixed
+boardOneline:
+  name: Add button to show task as oneline view in Board
+childPage:
+  name: Input parent page name automatically when creating new page
+copyIssueKeysAndSubjects:
+  name: Copy issue keys and subjects on issue list
+copyWiki:
+  name: Copy wiki page to other project
+extendDesc:
+  name: Extend description of issue on Add/Edit Issue
+hr:
+  name: Show horizontal rule with Backlog syntax("---" or "___")
+jumpIssue:
+  name: Press Ctrl(Cmd)+K to enter the issue key and open to it
+oldPost:
+  name: Show notification in old Wiki
+plantuml:
+  name: Show PlantUML(Send UML data to plantuml.com)
+totalTime:
+  name: Show total estimated and actual hours on search result of issues
+userSwitcher:
+  name: Show user switcher on personal Gantt
+
 copy_issue:
   prompt: Please input destination project key
   copy_to: Copy to another project
