--- a/locales/ja.yaml
+++ b/locales/ja.yaml
@@ -1,25 +1,40 @@
 app:
   name: Backlog Power Ups - Backlogを便利に
   description: Backlogの機能をパワーアップします。11個の機能追加があります。
+applyButton: hello
 popup:
   apply_button: 適用
   issue: 課題
-  auto_resolution: 状態の完了時、自動的に完了理由を対応済みにする
-  extend_desc: 課題追加/編集画面の詳細の入力欄を広げる
-  total_time: 検索結果の予定時間計と実績時間計を表示する
   board: ボード
-  board_oneline: ボードの状態を1行表示するボタンを追加する
   wiki: Wiki
-  copy_wiki: 別のプロジェクトにWikiのページをコピー
-  child_page: ページの新規作成時に親フォルダ名を自動入力する
-  plantuml: PlantUMLを表示(UMLデータをplantuml.comに送信します)
-  hr: Backlog記法で水平線を表示("---" もしくは "___")
-  old_post: 最終更新日から1年以上経過した記事にお知らせを表示する
   general: 一般
-  user_switcher: 個人のガントチャートにユーザー切り替えを表示する
-  absolute_date: 絶対時間で時間を表示する
-  copy_issue_keys_and_subjects: 課題一覧で課題キーと件名を一括コピーする
-  jump_issue: Ctrl(Cmd)+Kで課題キーを入力して、その課題を開く
+absoluteDate:
+  name: 絶対時間で時間を表示する
+autoResolution:
+  name: 状態の完了時、自動的に完了理由を対応済みにする
+boardOneline:
+  name: ボードの状態を1行表示するボタンを追加する
+childPage:
+  name: ページの新規作成時に親フォルダ名を自動入力する
+copyIssueKeysAndSubjects:
+  name: 課題一覧で課題キーと件名を一括コピーする
+copyWiki:
+  name: 別のプロジェクトにWikiのページをコピー
+extendDesc:
+  name: 課題追加/編集画面の詳細の入力欄を広げる
+hr:
+  name: Backlog記法で水平線を表示("---" もしくは "___")
+jumpIssue:
+  name: Ctrl(Cmd)+Kで課題キーを入力して、その課題を開く
+oldPost:
+  name: 最終更新日から1年以上経過した記事にお知らせを表示する
+plantuml:
+  name: PlantUMLを表示(UMLデータをplantuml.comに送信します)
+totalTime:
+  name: 検索結果の予定時間計と実績時間計を表示する
+userSwitcher:
+  name: 個人のガントチャートにユーザー切り替えを表示する
+
 copy_issue:
   prompt: 複製先のプロジェクトキーを入力してください。
   copy_to: 別のプロジェクトに複製
