--- a/locales/en.yaml
+++ b/locales/en.yaml
@@ -1,12 +1,15 @@
 app:
   name: Backlog Power Ups
   description: Power up tools for Backlog
-popup:
-  apply_button: Apply
+group:
   issue: Issue
   board: Board
   wiki: Wiki
   general: General
+
+popup:
+  apply_button: Apply
+
 absoluteDate:
   name: Show absolute date
 autoResolution:
@@ -17,38 +20,28 @@ childPage:
   name: Input parent page name automatically when creating new page
 copyIssueKeysAndSubjects:
   name: Copy issue keys and subjects on issue list
+  tooltip: Bulk copy key and subject of issues
 copyWiki:
   name: Copy wiki page to other project
+  prompt: Please input destination project key
+  copy_to: Copy to another project
 extendDesc:
   name: Extend description of issue on Add/Edit Issue
 hr:
   name: Show horizontal rule with Backlog syntax("---" or "___")
 jumpIssue:
   name: Press Ctrl(Cmd)+K to enter the issue key and open to it
+  prompt: Please enter the destination issue key or issue key number
+  alert: Issue key format is invalid
+  missing: Issue not found for the entered issue key
 oldPost:
   name: Show notification in old Wiki
+  alert: More than 1 year has passed since the last update date.
 plantuml:
   name: Show PlantUML(Send UML data to plantuml.com)
 totalTime:
   name: Show total estimated and actual hours on search result of issues
-userSwitcher:
-  name: Show user switcher on personal Gantt
-
-copy_issue:
-  prompt: Please input destination project key
-  copy_to: Copy to another project
-  refs: Refs
-copy_issue_keys_and_subjects:
-  tooltip: Bulk copy key and subject of issues
-copy_wiki:
-  prompt: Please input destination project key
-  copy_to: Copy to another project
-jump_issue:
-  prompt: Please enter the destination issue key or issue key number
-  alert: Issue key format is invalid
-  missing: Issue not found for the entered issue key
-old_post:
-  alert: More than 1 year has passed since the last update date.
-total_time:
   estimated_hours: Total estimated
   actual_hours: Total actual
+userSwitcher:
+  name: Show user switcher on personal Gantt
