--- a/locales/ja.yaml
+++ b/locales/ja.yaml
@@ -2,10 +2,14 @@ app:
   name: Backlog Power Ups - Backlogを便利に
   description: Backlogの機能をパワーアップします。11個の機能追加があります。
 group:
+  general: 一般
   issue: 課題
   board: ボード
+  gantt: ガントチャート
+  document: ドキュメント
   wiki: Wiki
-  general: 一般
+  file: ファイル
+  git: Git / SVN
 popup:
   apply_button: 適用
 absoluteDate:
