--- a/locales/ja.yaml
+++ b/locales/ja.yaml
@@ -27,6 +27,8 @@ copyWiki:
   name: 別のプロジェクトにWikiのページをコピー
   prompt: 複製先のプロジェクトキーを入力してください。
   copy_to: 別のプロジェクトにコピー
+favicon:
+  name: ファビコンをスペースアイコンかプロジェクトアイコンに置き換え(お知らせ件数の表示はできません)
 zenMode:
   name: ドキュメントで集中モード（他のUIを隠す）を切り替える
 extendDesc:
