--- a/locales/en.yaml
+++ b/locales/en.yaml
@@ -61,3 +61,9 @@ expandDiffFileLink:
   name: Expand the link area for the difference file
 searchKeyboard:
   name: Navigate through keyword search results with Tab and arrow keys
+ganttFilterParentAndChild:
+  name: Filter rows by parent-child relationship
+  label: Relationship
+  all: All
+  parent: Parent issue
+  child: Child issue
