add hideEmptyColumn plugin

--- a/locales/en.yaml
+++ b/locales/en.yaml
@@ -71,3 +71,5 @@ openInDialog:
   name: Long press a link in a Backlog space to open it in a dialog
   openInMainFrame: Go to this page
   close: Close
+hideEmptyColumn:
+  name: Hide all empty columns
