--- a/locales/ja.yaml
+++ b/locales/ja.yaml
@@ -73,3 +73,10 @@ openInDialog:
   close: 閉じる
 hideEmptyColumn:
   name: 値がすべて空の列を隠す
+projectIssueFilter:
+  name: 課題一覧でそのプロジェクトのフィルタを選択する
+  placeholder: フィルタ
+  loading: 読み込み中...
+  projectLabel: $1のフィルタ
+  spaceLabel: 課題検索のフィルタ
+  empty: フィルタがありません
