--- a/locales/ja.yaml
+++ b/locales/ja.yaml
@@ -86,3 +86,6 @@ copyRawFile:
 filePermalink:
   name: ブランチのファイルURLからコミットハッシュのファイルURLに移動するボタンを追加する
   label: パーマリンク
+copyPullSummary:
+  name: プルリクエストの番号とタイトルをコピーするボタンを追加する
+  tooltip: プルリクエスト番号（$1）とタイトルをクリップボードにコピーします。Shiftキーを押しながらクリックするとプルリクエスト番号のみがコピーされます。
