chore: fix app name

--- a/locales/ja.yaml
+++ b/locales/ja.yaml
@@ -1,5 +1,5 @@
 app:
-  name: Backlog Power Ups - Backlogを便利に
+  name: Backlog Power-Ups - Backlogを便利に
   description: Backlog をパワーアップさせる便利なプラグイン集
 group:
   general: 一般
